# fastllm

./: .gitignore  CHANGELOG.md  README.md  TODO.md  cachy.jsonl  pyproject.toml
_proc/: 00_types.ipynb  01_normalize.ipynb  02_streaming.ipynb  03_acomplete.ipynb  04_cost.ipynb  README.md  index.ipynb
examples/: fastllm_acompletion.ipynb  fastllm_ops.ipynb
fastllm/: __init__.py  _modidx.py  acomplete.py  anthropic.py  chat.py  clients.py  codex.py  cost.py  gemini.py  highlevel.py  normalize.py  oapi.py  openai_chat.py  openai_responses.py  spec.py  specsync.py  sse.py  streaming.py  transport.py  types.py
fastllm/specs/: anthropic.json  openai.with-code-samples.json
fastllm_py/: README.md  __init__.py  errors.py  files.py  types.py
fastllm_v2/: __init__.py  builtin_specs.py  clients.py  config.py  costs.py  errors.py  factory.py  files.py  highlevel.py  normalize.py  oapi.py  official_ops.py  spec.py  streaming.py  transport.py  types.py
fastllm_v2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fastllm_v2/providers/: __init__.py  openai.py
nbs/: 00_acomplete.ipynb  00_config.ipynb  00_errors.ipynb  00_types.ipynb  01_errors.ipynb  01_normalize.ipynb  01_streaming.ipynb  01_types.ipynb  02_oai_responses.ipynb  02_sse.ipynb  02_streaming.ipynb  03_acomplete.ipynb  03_clients.ipynb  03_oai_chat.ipynb  03_transport.ipynb  03_types.ipynb  04_anthropic.ipynb  04_cost.ipynb  04_spec.ipynb  05_codex.ipynb  05_gemini.ipynb  05_oapi.ipynb  05_transport.ipynb  06_acomplete.ipynb  06_costs.ipynb  06_normalize.ipynb  07_chat.ipynb  07_normalize.ipynb  07_streaming.ipynb  08_costs.ipynb  08_streaming.ipynb  09_clients.ipynb  09_official_ops.ipynb  10_highlevel.ipynb  10_oapi.ipynb  11_builtin_specs.ipynb  11_files.ipynb  12_clients.ipynb  12_specsync.ipynb  13_factory.ipynb  (+9 more)
specs/: spec_manifest.json
tests/: test_anthropic_gemini.py  test_costs_and_specs.py  test_factory_and_patches.py  test_files_api.py  test_highlevel_api.py  test_oapi_generic_io.py  test_openai_responses.py  test_signatures.py  test_spec_oapi.py  test_specsync.py  test_streaming_lossless.py
