[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fastllm_v2"
dynamic = ["version"]
description = "OpenAPI-layered minimal LLM API client"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "AnswerDotAI", email = "support@answer.ai"}]
keywords = ["llm", "openapi", "fastcore", "httpx", "python"]
classifiers = [
  "Natural Language :: English",
  "Intended Audience :: Developers",
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only"
]
dependencies = [
  "fastcore>=1.8.4",
  "httpx>=0.27"
]

[project.urls]
Repository = "https://github.com/AnswerDotAI/fastllm_v2"
Documentation = "https://fastllm.answer.ai/"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.setuptools.dynamic]
version = {attr = "fastllm_v2.__version__"}

[tool.setuptools.packages.find]
include = ["fastllm_v2*"]
