[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fastllm"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Kerem Turgutlu", email = "keremturgutlu@gmail.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ['httpx', 'fastcore']

[project.urls]
Repository = "https://github.com/AnswerDotAI/fastllm"

[project.entry-points.nbdev]
fastllm = "fastllm._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "fastllm.__version__"}

[tool.setuptools.packages.find]
include = ["fastllm"]

[tool.nbdev]
nbs_path = "nbs"
recursive = false
jupyter_hooks = true
custom_sidebar = false
allowed_metadata_keys = ['solveit_dialog_mode', 'solveit_ver']